Colaboratory を使用して作成しました

--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPSFVQFNXnTytjSTEQBvg7B",
+      "authorship_tag": "ABX9TyPWvcLVdDtWYmMqqjPO44dp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -326,6 +326,7 @@
         "outputId": "72489f06-b351-434c-af4b-c08ceb709124"
       },
       "source": [
+        "# python\n",
         "def fac (n) :\n",
         "    if n == 0 :\n",
         "        return 1\n",
@@ -1530,7 +1531,7 @@
       "source": [
         "92 // 10"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1559,6 +1560,295 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "g2awhpFhVCQL",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 関数"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XkZ08fY0VEv6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> doubleMe x = x + x\n",
+        "Prelude> doubleMe 9\n",
+        "18\n",
+        "Prelude> doubleMe 8.3\n",
+        "16.6\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZJDh4GipVhYq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> doubleUs x y = x*2 + y*2   \n",
+        "Prelude> doubleUs 4 9\n",
+        "26\n",
+        "Prelude> doubleUs 2.3 34.2\n",
+        "73.0\n",
+        "Prelude> doubleUs 28 88 + doubleMe 123\n",
+        "478\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ldKkYAW3VtEX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> doubleUs x y = doubleMe x + doubleMe y\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Mdjyx2G7bfMf",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> doubleSmallNumber x = if x > 100 then x else x*2\n",
+        "Prelude> doubleSmallNumber 120\n",
+        "120\n",
+        "Prelude> doubleSmallNumber 12\n",
+        "24\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "s7bImZu-cwh0",
+        "colab_type": "text"
+      },
+      "source": [
+        "Haskell の if では else は必須。なぜなら if は式であり、返り値が必要だから。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qV8VRsIJbm3I",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "3852d877-1547-4a86-df1d-68b65dc43854"
+      },
+      "source": [
+        "# python\n",
+        "\n",
+        "def doubleSmallNumber (x) :\n",
+        "    if x > 100 :\n",
+        "        return x\n",
+        "    else:\n",
+        "        return x * 2\n",
+        "\n",
+        "print (doubleSmallNumber (120))\n",
+        "print (doubleSmallNumber (12))"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "120\n",
+            "24\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PhAfzsAbdTHu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> doubleSmallNumber' x = (if x > 100 then x else x*2) + 1 "
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "j02DA3mwdUGF",
+        "colab_type": "text"
+      },
+      "source": [
+        "上の例では `()` がないと違う意味になる。\n",
+        "\n",
+        "あと、関数名に \\` がついているが、バッククォートは名前に使えるので上ような使い方をする。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5mNdpWKTdsTr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> conanO'Brien = \"It's a-me, Conan O'Brien!\"   \n",
+        "Prelude> conanO'Brien \n",
+        "\"It's a-me, Conan O'Brien!\"\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QPcmXomYd-sT",
+        "colab_type": "text"
+      },
+      "source": [
+        "上の例で2つのことを指摘したい。\n",
+        "\n",
+        "1. 関数名は小文字で始まる。\n",
+        "1. 関数は引数なしもあり得る。引数なしの場合、ただの定義になる。"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "y6H51hT-zQ3d",
+        "colab_type": "text"
+      },
+      "source": [
+        "# リスト"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wnQmo8IGzSaV",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> let lostNumbers = [4,8,15,16,23,42]\n",
+        "Prelude> lostNumbers\n",
+        "[4,8,15,16,23,42]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rvpkOXPo0aJu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> [1,2,3,4] ++ [9,10,11,12]\n",
+        "[1,2,3,4,9,10,11,12]\n",
+        "Prelude> \"hello\" ++ \" \" ++ \"world\"\n",
+        "\"hello world\"\n",
+        "Prelude> ['w', 'o'] ++ ['o','t']\n",
+        "\"woot\"\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U_9C6CqF0sRr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> 'A':\" SMALL CAT\"\n",
+        "\"A SMALL CAT\"\n",
+        "Prelude> 5:[1,2,3,4,5]\n",
+        "[5,1,2,3,4,5]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "o4UHyTtI07zX",
+        "colab_type": "text"
+      },
+      "source": [
+        "`[1,2,3]` は内部的には `1:2:3:[]` で、`[]` は空リストである。空リストの冒頭に 3 を加えると `[3]` になる。できたリストの頭に 2 を加えると、`[2,3]` になる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tn4oyGN-1yoR",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> \"Steve Buscemi\" !! 6\n",
+        "'B'\n",
+        "Prelude> [9.4,33.2,96.2,11.2,23.25] !! 1\n",
+        "33.2\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "09V_A7nx1ztd",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "1d1bc549-776d-4ef4-8d1a-6a83293b2daa"
+      },
+      "source": [
+        "# python\n",
+        "\n",
+        "print (\"Steve Buscemi\"[6])\n",
+        "\n",
+        "print ([9.4,33.2,96.2,11.2,23.25][1])\n"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "B\n",
+            "33.2\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
