Colaboratory を使用して作成しました

--- a/haskell01.ipynb
+++ b/haskell01.ipynb
@@ -6,7 +6,7 @@
       "name": "haskell01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPWvcLVdDtWYmMqqjPO44dp",
+      "authorship_tag": "ABX9TyPpiOORxJQsYEdJ089y6l9s",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1849,6 +1849,201 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "bFGr1ma4GG1k",
+        "colab_type": "text"
+      },
+      "source": [
+        "インデクスが大きすぎるとエラーになる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XtxFVZtxGFCh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude>  [9.4,33.2,96.2,11.2,23.25] !! 6\n",
+        "*** Exception: Prelude.!!: index too large\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_aV1mz3EF7K-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> let b = [[1,2,3,4],[5,3,3,3],[1,2,2,3,4],[1,2,3]]\n",
+        "Prelude> b ++ [[1,1,1,1]] \n",
+        "[[1,2,3,4],[5,3,3,3],[1,2,2,3,4],[1,2,3],[1,1,1,1]]\n",
+        "Prelude> [6,6,6]:b\n",
+        "[[6,6,6],[1,2,3,4],[5,3,3,3],[1,2,2,3,4],[1,2,3]]\n",
+        "Prelude> b !! 2\n",
+        "[1,2,2,3,4]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "m3hlaMnMGgIq",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> [3,2,1] > [2,1,0]\n",
+        "True\n",
+        "Prelude> [3,2,1] > [2,10,100] \n",
+        "True\n",
+        "Prelude> [3,4,2] > [3,4]\n",
+        "True\n",
+        "Prelude> [3,4,2] > [2,4] \n",
+        "True\n",
+        "Prelude> [3,4,2] == [3,4,2]\n",
+        "True\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "F4wLT3baGqIy",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> head [5,4,3,2,1] \n",
+        "5\n",
+        "Prelude> tail [5,4,3,2,1] \n",
+        "[4,3,2,1]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GFNfbwqRG0Ec",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> last [5,4,3,2,1]  \n",
+        "1\n",
+        "Prelude> init [5,4,3,2,1] \n",
+        "[5,4,3,2]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "lUNKb5yuG7lC",
+        "colab_type": "text"
+      },
+      "source": [
+        "空リストの head を取ろうとするとエラーになる。"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nW8V3FxzG8Fp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> head []\n",
+        "*** Exception: Prelude.head: empty list\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "3zr0TMJkHVd-",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> length [5,4,3,2,1]\n",
+        "5\n",
+        "Prelude> null [1,2,3]  \n",
+        "False\n",
+        "Prelude> null [] \n",
+        "True\n",
+        "Prelude> reverse [5,4,3,2,1] \n",
+        "[1,2,3,4,5]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "x17NceVRHlSz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> take 3 [5,4,3,2,1]\n",
+        "[5,4,3]\n",
+        "Prelude> take 1 [3,9,3]\n",
+        "[3]\n",
+        "Prelude> take 5 [1,2]\n",
+        "[1,2]\n",
+        "Prelude> take 0 [6,6,6]\n",
+        "[]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IItgPWw8Hylk",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> drop 3 [8,4,2,1,5,6]  \n",
+        "[1,5,6]\n",
+        "Prelude> drop 0 [1,2,3,4] \n",
+        "[1,2,3,4]\n",
+        "Prelude> drop 100 [1,2,3,4] \n",
+        "[]\n"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hHOHtCnlH690",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "Prelude> minimum [8,4,2,1,5,6]\n",
+        "1\n",
+        "Prelude> maximum [1,9,2,3,4] \n",
+        "9\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
