Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb のコピー",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyN6mPAOnY5xfufrTdHmqZ4O",
+      "authorship_tag": "ABX9TyMFKPCEBsn5+k1F2NT7Rtky",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -431,7 +431,9 @@
         "colab_type": "text"
       },
       "source": [
-        "`3 == 3.0` が `True` になるのは整数を浮動小数点に変換してから比較しているのだろう。"
+        "`3 == 3.0` が `True` になるのは整数を浮動小数点に変換してから比較しているのだろう。\n",
+        "\n",
+        "`3 === 3.0' というような厳密な比較をする演算子はないみたい。"
       ]
     },
     {
