--- a/matplotlib01.ipynb
+++ b/matplotlib01.ipynb
@@ -6,7 +6,7 @@
       "name": "matplotlib01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOgao74lTayQn1+JoNTeAtb",
+      "authorship_tag": "ABX9TyNqr7GYnHa/6tOenSw9WZ5U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -822,6 +822,8 @@
         "xy_name = zip (xy, data_name)\n",
         "for (i, name) in zip (xy, data_name) :\n",
         "    ax.annotate(name,i, xycoords='data', xytext=(-7,-40), textcoords='offset points', fontsize=20)\n",
+        "# for (i, j, name) in zip (x, y, data_name) :\n",
+        "#     plt.text(i, j, name, fontsize=15, position=(i-0.05, j-0.2))\n",
         "\n",
         "ax.set_axis_off()\n",
         "plt.show()"
@@ -887,7 +889,7 @@
         "# ax.set_axis_off()\n",
         "plt.show()"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
