Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPIUepiXX4t8sjfLkiuNrYG",
+      "authorship_tag": "ABX9TyN6zBX3GT2pPAdi1tfgMGxu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2889,7 +2889,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2933,7 +2933,7 @@
         "\n",
         "plt.show()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2958,6 +2958,16 @@
       },
       "source": [
         "# p.39"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6XNDcH9jNdSs",
+        "colab_type": "text"
+      },
+      "source": [
+        "myjupyternotebooksで開けるのはなぜだ!!!!"
       ]
     }
   ]
