Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOZBAGfP9Yjuo00ivtmWq7N",
+      "authorship_tag": "ABX9TyOQXq41cBE0opcXQzVHZQb5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2995,7 +2995,7 @@
         "plt.savefig('mygraph.svg')\n",
         "plt.show()"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3037,7 +3037,7 @@
         "from google.colab import files\n",
         "files.download('mygraph.svg')"
       ],
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3136,7 +3136,7 @@
         "\n",
         "F = \\frac{Gm_1m_2}{r^2}"
       ],
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3163,9 +3163,52 @@
         "\n",
         "$m_1$ を 0.5kg、$m_2$ を 1.5kg とする。\n",
         "引力定数は\n",
-        "$6.674 \\times 10^{11} \\,\\mathrm{N m^2 kg^{-2}} $\n",
-        "である。"
+        "$6.674 \\times 10^{-11} \\,\\mathrm{N m^2 kg^{-2}} $\n",
+        "である。\n",
+        "\n",
+        "距離を100m, 150m, 200m, 300m, ..., 1000m とした時の 19 の点について引力のグラフを描く。\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N5QYYLocABBp",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import matplotlib.pyplot as plt\n",
+        "import numpy as np\n",
+        "\n",
+        "\n",
+        "'''The relationship between gravitational force anddistance between two bodies'''\n",
+        "\n",
+        "import matplotlib.pyplot as plt# Draw the graphdef draw_graph(x, y):    plt.plot(x, y, marker='o')    plt.xlabel('Distance in meters')\n",
+        "\n",
+        "plt.ylabel('Gravitational force in newtons')    plt.title('Gravitational force and distance')    plt.show()def generate_F_r():    # Generate values for ru     r = range(100, 1001, 50)     # Empty list to store the calculated values of F    F = []    # Constant, G    G = 6.674*(10**-11)    # Two masses    m1 = 0.5    m2 = 1.5    # Calculate force and add it to the list, Fv     for dist in r:        force = G*(m1*m2)/(dist**2)        F.append(force)    # Call the draw_graph functionw     draw_graph(r, F)\n",
+        "\n",
+        "nyc_temp_2000 = [31.3, 37.3, 47.2, 51.0, 63.5, 71.3, 72.3, 72.7, 66.0, 57.0, 45.3, 31.1]\n",
+        "nyc_temp_2006 = [40.9, 35.7, 43.1, 55.7, 63.1, 71.0, 77.9, 75.8, 66.6, 56.2, 51.9, 43.6]\n",
+        "nyc_temp_2012 = [37.3, 40.9, 50.9, 54.8, 65.1, 71.0, 78.8, 76.7, 68.8, 58.0, 43.9, 41.5]\n",
+        "\n",
+        "fig = plt.figure()\n",
+        "ax = fig.add_subplot()\n",
+        "# ax.axis(ymin=0,ymax=80)\n",
+        "ax.axis([0,13,0,100])\n",
+        "\n",
+        "months = range (1,13)\n",
+        "ax.plot(months, nyc_temp_2000)\n",
+        "ax.plot(months, nyc_temp_2006)\n",
+        "ax.plot(months, nyc_temp_2012)\n",
+        "plt.title('Average monthly temperature in NYC')\n",
+        "plt.xlabel('Month')\n",
+        "plt.ylabel('Temperature')\n",
+        "plt.legend([2000,2006,2012])\n",
+        "plt.savefig('mygraph.svg')\n",
+        "plt.show()"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
