Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNHAnYE27BvsRUjyrzKO4M+",
+      "authorship_tag": "ABX9TyMJUJEWSN2MDOM9bnWz88P3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3224,7 +3224,7 @@
         "plt.title('Gravitational force and distance')\n",
         "plt.show()\n"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3278,7 +3278,16 @@
         "S_y = u (\\sin \\theta) t - \\frac{1}{2}gt^2\n",
         "$$\n",
         "\n",
-        "となる。\n"
+        "となる。\n",
+        "\n",
+        "ボールが頂点に達した時、$v_y$ は $0$ になっていることからそこ到達するまでの時間が割り出せる。\n",
+        "\n",
+        "$$\n",
+        "u sin ¥theta - gt = 0  \n",
+        "t = ¥frac{u ¥sin ¥theta}{g}\n",
+        "$$\n",
+        "\n",
+        "\n"
       ]
     },
     {
