Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPeAWAr2i9LR1ye4tNUgD3D",
+      "authorship_tag": "ABX9TyMqX0ah4QIH06D/jVcC4B7O",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3283,21 +3283,102 @@
         "ボールが頂点に達した時、$v_y$ は $0$ になっていることからそこ到達するまでの時間が割り出せる。\n",
         "\n",
         "$$\n",
-        "u \\sin \\theta - gt_{peak} = 0  \\\\\n",
-        "t_{peak} = \\frac{u \\sin \\theta}{g}\n",
+        "u \\sin \\theta - gt_{\\mathrm{peak}} = 0  \\\\\n",
+        "t_{\\mathrm{peak}} = \\frac{u \\sin \\theta}{g}\n",
         "$$\n",
         "\n",
         "落ちてくるまでの時間はこの倍。\n",
         "$$\n",
-        "t_{flight} = 2t_{peak} = 2 \\frac{u \\sin \\theta}{g}\n",
+        "t_{\\mathrm{flight}} = 2t_{\\mathrm{peak}} = 2 \\frac{u \\sin \\theta}{g}\n",
         "$$\n",
         "\n",
         "初速度 $u$ を $5 \\mathrm{m/s}$、角度 $\\theta$ を $45$度とすると、下記のように計算できる。\n",
         "\n",
         "$$\n",
-        "t_{flight} = 2 \\frac {5 \\sin 45}{9.8}\n",
+        "t_{\\mathrm{flight}} = 2 \\frac {5 \\sin 45}{9.8}\n",
         "$$"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PGbj2-7NjWr4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "f1b16eab-a203-4681-f049-4fb33fd81c12"
+      },
+      "source": [
+        "import math\n",
+        "2 * 5 * math.sin(45/180*math.pi) / 9.8"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.7215375318230076"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 12
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "CZhTpk-fkbR8",
+        "colab_type": "text"
+      },
+      "source": [
+        "ここでは $t_{\\mathrm{flight}}$ を 0.72154 とする。\n",
+        "\n",
+        "この時間を0.001秒ごとに x 座標と y 座標を計算して、グラフを描くこととしよう。\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "nUuX1gJmmebI",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def frange (start, final, increment):\n",
+        "    \"\"\"\n",
+        "    float version of interval increment between 2 given numbers\n",
+        "    \"\"\"\n",
+        "    numbers = []\n",
+        "    while start < final:\n",
+        "        numbers.append(start)\n",
+        "        start = start + increment\n",
+        "    \n",
+        "    return numbers\n",
+        "\n",
+        "\n"
+      ],
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fU4Oyi4Jnlkt",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "frange?"
+      ],
+      "execution_count": 14,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
