Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMWVV+HWmAIymiDbT+7cON9",
+      "authorship_tag": "ABX9TyP0bwzE/EmO0CoS+gov8McS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3854,6 +3854,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Vabcs23x_AJK",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 平均値 mean"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "49e54lK11xe7",
@@ -3871,7 +3881,7 @@
         "mean = sum(donations) / len(donations)\n",
         "print (mean)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3907,7 +3917,7 @@
         "\n",
         "print('Mean donation over the last {0} days is {1}'.format(N, mean))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3919,18 +3929,69 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "swWEMeI4-72d",
+        "colab_type": "text"
+      },
+      "source": [
+        "### メディアン 中央値"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "xzEYFI954bBb",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "92f948e9-1c3b-49b7-ad3a-7c91a265e13d"
       },
       "source": [
         "def calculate_median(numbers):\n",
+        "    N = len(numbers)\n",
+        "    numbers.sort()\n",
+        "    if N % 2 == 0:\n",
+        "        m1 = int(N/2 - 1)\n",
+        "        m2 = int(N/2 - 1)\n",
+        "        median = (numbers[m1] + numbers[m2]) / 2\n",
+        "    else:\n",
+        "        m = int((N-1)/2)\n",
+        "        median = numbers[m]\n",
+        "    return median\n",
+        "\n",
+        "donations = [100, 60, 70, 900, 100, 200, 500, 500, 503, 600, 1000, 1200]\n",
+        "\n",
+        "median = calculate_median(donations)\n",
+        "N = len(donations)\n",
+        "\n",
+        "print ('Median donation over the last {0} days is {1}'.format(N, median))\n",
+        "\n",
         "    "
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Median donation over the last 12 days is 500.0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WXJiVmcF-vVy",
+        "colab_type": "text"
+      },
+      "source": [
+        "### mode 最頻値\n",
+        "\n"
+      ]
     },
     {
       "cell_type": "markdown",
