--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyO2zDCVaCHvyaMzMmtJfKGL",
+      "authorship_tag": "ABX9TyM5S2k58/vlZrQNWnV1a1Ne",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2680,7 +2680,7 @@
       },
       "source": [
         "emptylist = []\n",
-        "emptylist.append(1)\n",
+        "emptylist.append(1) # in-place\n",
         "emptylist.append(\"two\")\n",
         "emptylist = emptylist + [3, 4]\n",
         "print (emptylist)"
@@ -4051,64 +4051,38 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "UCrtbxN173n4",
+        "id": "oKbGRebB-PgN",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "63cfe6a9-e4e5-455c-f62f-d21da7dd77d5"
+        "outputId": "7ba2644f-1b48-4413-d87c-195d0bcdb3e9"
       },
       "source": [
-        "simplelist = [4,2,1,4,2,2,3,1,4]\n",
-        "# simplelistをソートする\n",
-        "# 要素をグループ化する\n",
-        "# それぞれのグループを数えて、タプルにする\n",
-        "# simplelist = simplelist.sort()\n",
-        "simplelist.sort()\n",
-        "print (simplelist)\n",
-        "# print ([5,3,2,6].sort())\n",
-        "# help([].sort) => stable sort *IN PLACE* !!!! => なんちゅうこっちゃ。 python て変だねー。\n",
-        "# まあこれはいいとして、group も実装しなくちゃいけなし、タプルにするにはどうするか。 またいつか戻ってきて考えよう。"
-      ],
-      "execution_count": 12,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[1, 1, 2, 2, 2, 3, 4, 4, 4]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "oKbGRebB-PgN",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 101
-        },
-        "outputId": "e2bc8b8c-c2a1-48e3-a96c-78a52dedd380"
-      },
-      "source": [
-        "help([].sort)"
+        "a = []\n",
+        "a.append(3)\n",
+        "print(a)"
       ],
       "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Help on built-in function sort:\n",
-            "\n",
-            "sort(...) method of builtins.list instance\n",
-            "    L.sort(key=None, reverse=False) -> None -- stable sort *IN PLACE*\n",
-            "\n"
+            "[3]\n"
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "6Wx20s8Spu9N",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
@@ -4119,6 +4093,51 @@
       },
       "source": [
         "# p.58"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UCrtbxN173n4",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 168
+        },
+        "outputId": "7bbc5b98-5356-4a84-82c8-c61e9043a72b"
+      },
+      "source": [
+        "simplelist = [4,2,1,4,2,2,3,1,4]\n",
+        "# simplelistをソートする\n",
+        "# 要素をグループ化する => for i in range():\n",
+        "# それぞれのグループを数えて、タプルにする => first, len, map, zip\n",
+        "# \n",
+        "# sortもappendも\n",
+        "simplelist.sort()\n",
+        "print (simplelist)\n",
+        "# print ([5,3,2,6].sort())\n",
+        "# help([].sort) => stable sort *IN PLACE* !!!! => なんちゅうこっちゃ。 python て変だねー。\n",
+        "# まあこれはいいとして、group も実装しなくちゃいけなし、タプルにするにはどうするか。 またいつか戻ってきて考えよう。\n",
+        "for i in range (len(simplelist)-1)\n",
+        "    print (simplelist[i])"
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 1, 2, 2, 2, 3, 4, 4, 4]\n",
+            "1\n",
+            "1\n",
+            "2\n",
+            "2\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "4\n"
+          ],
+          "name": "stdout"
+        }
       ]
     }
   ]
