Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyM2GxMwGmU6tMiwDjk2Yio9",
+      "authorship_tag": "ABX9TyNfHRlpWDHo+S+iOeqw0OTh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4132,10 +4132,10 @@
         "\n",
         "\n",
         "\n",
-        "for i in range (len(simplelist)-1):\n",
-        "    print (simplelist[i])"
+        "# for i in range (len(simplelist)-1):\n",
+        "#     print (simplelist[i])"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4157,45 +4157,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QhhzqyqfOXS3",
+        "id": "3fxqttdJPvZU",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "simplelist = [4,2,1,4,2,2,3,1,4]\n",
+        "myset = set(simplelist)"
+      ],
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WBYrEI_cP_4D",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "81a79ddf-65e0-4655-bfd9-b1cf5cb65726"
+        "outputId": "a3b9a7af-ee63-4272-8c1e-533610342df1"
       },
       "source": [
-        "[[3]]"
+        "print (list(myset))"
       ],
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[[3]]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 3
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4]\n"
+          ],
+          "name": "stdout"
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "r2zFCajtRRfs",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
