Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNfHRlpWDHo+S+iOeqw0OTh",
+      "authorship_tag": "ABX9TyP3YzJyHw3whtzcGsbxtN3J",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4012,7 +4012,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "05ef99ac-af18-4dd9-f6cf-2952ea302880"
+        "outputId": "d5345875-c192-477b-ca69-3ddf2c0b81eb"
       },
       "source": [
         "simplelist = [4,2,1,4,2,2,3,1,4]\n",
@@ -4020,7 +4020,7 @@
         "c =Counter(simplelist)\n",
         "c.most_common()"
       ],
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4032,7 +4032,32 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 2
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vfi4JcjgDAUr",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "14f24632-11d1-40f6-8234-e36d26ed57ad"
+      },
+      "source": [
+        "print (c)"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Counter({4: 3, 2: 3, 1: 2, 3: 1})\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
@@ -4159,35 +4184,27 @@
       "metadata": {
         "id": "3fxqttdJPvZU",
         "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "simplelist = [4,2,1,4,2,2,3,1,4]\n",
-        "myset = set(simplelist)"
-      ],
-      "execution_count": 1,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "WBYrEI_cP_4D",
-        "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a3b9a7af-ee63-4272-8c1e-533610342df1"
+        "outputId": "13b3a31d-b047-4acf-8dda-4067ac76a350"
       },
       "source": [
-        "print (list(myset))"
+        "simplelist = [4,2,1,4,2,2,3,1,4]\n",
+        "items = list(set(simplelist))\n",
+        "counts = []\n",
+        "for i in items:\n",
+        "    counts.append(simplelist.count(i))\n",
+        "item_count = zip(items, counts)\n",
+        "print (list(item_count))\n"
       ],
-      "execution_count": 4,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1, 2, 3, 4]\n"
+            "[(1, 2), (2, 3), (3, 1), (4, 3)]\n"
           ],
           "name": "stdout"
         }
