Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMZKRo0DLKxpo3+ni4jIJ6W",
+      "authorship_tag": "ABX9TyPaincwm7eaX/y+y4L8XJ1A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4658,7 +4658,7 @@
         "\n",
         "    return correlation\n"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4885,7 +4885,7 @@
         "d_x4 = [8.0, 8.0, 8.0, 8.0, 8.0, 8.0, 8.0, 19.0, 8.0, 8.0, 8.0]\n",
         "d_y4 = [6.58, 5.76, 7.71, 8.84, 8.47, 7.04, 5.25, 12.50, 5.56, 7.91, 6.89]"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4971,7 +4971,7 @@
         "print(mean(c_x3), stddev(c_x3), mean(c_y3), stddev(c_y3), find_corr_x_y(c_x3, c_y3))\n",
         "print(mean(d_x4), stddev(d_x4), mean(d_y4), stddev(d_y4), find_corr_x_y(d_x4, d_y4))\n"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5030,7 +5030,7 @@
         "ax4.set_ylabel(\"Y4\")\n",
         "plt.show()"
       ],
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5081,7 +5081,18 @@
         "colab_type": "text"
       },
       "source": [
-        "There are a number of ways to find the observation corresponding to a given percentile, but here’s one approach.2Let’s say we want to calculate the observation at percentile p:1. In ascending order, sort the given list of numbers, which we might call data.2. Calculate ,where n is the number of items in data.3. If i is an integer, data[i] is the number corresponding to percentile p.4. If i is not an integer, set k equal to the integral part of i and f equal to the fractional part of i. The number (1-f)*data[k] + f*data[k+1]is the number at percentile p.Using this approach, write a program that will take a set of numbers in a file and display the number that corresponds to a specific percentile sup-plied as an input to the program"
+        "パーセンタイルは次のような手順で算出する。 これをプログラム化する。\n",
+        "\n",
+        "1. パーセンタイル $p$ に対応する値を算出したいとする。\n",
+        "2. データを昇順 ascending order でソートする。 これを $\\mathrm{data}$ とする。\n",
+        "3. 次に、\n",
+        "$$\n",
+        "i = \\frac{np}{100} + 0.5\n",
+        "$$\n",
+        "を算出する。 ここで $n$ はデータの個数である。\n",
+        "4. この結果 $i$ が整数ならば $\\mathrm{data[i]}$ がパーセンタイル $p$ に対応する値である。\n",
+        "5. もし $i$ が整数でないならば、$i$ の整数部分の値を $k$ とし、小数点以下を $f$ として、\n",
+        "$\\mathrm{(1 - f)*data[k] + f * data[k + 1]}$ がパーセンタイル $p$ の値である。\n"
       ]
     },
     {
@@ -5089,10 +5100,136 @@
       "metadata": {
         "id": "LJYxjvYAxZnV",
         "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "93b9411c-aad0-40e2-a9f4-31c1dfeeea2f"
+      },
+      "source": [
+        "data = [5, 1, 9, 3, 14, 9, 7]\n",
+        "\n",
+        "def calc_percentile(x, p):\n",
+        "    x.sort()\n",
+        "    i = len(x)*p / 100 + 0.5\n",
+        "    if i == i // 1 :\n",
+        "        return (x[int(i-1)])\n",
+        "    else:\n",
+        "        k = i // 1\n",
+        "        f = i % 1\n",
+        "        return ((1-f)*x[int(k-1)]+f*x[int(k)])\n",
+        "\n",
+        "print (calc_percentile(data, 50))\n",
+        "print (calc_percentile(data, 25))"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "7\n",
+            "3.5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8ZV17iNrbdKO",
+        "colab_type": "text"
+      },
+      "source": [
+        "### 頻度表のグループ化 grouped frequency table\n",
+        "\n",
+        "以前\n",
+        "\n",
+        "scores = [7, 8, 9, 2, 10, 9, 9, 9, 9, 4, 5, 6, 1, 5, 6, 7, 8, 6, 1, 10]\n",
+        "\n",
+        "について頻度表を作成したが、これをグループ化して、次のような表を作成したい。\n",
+        "\n",
+        "Grade | Frequency\n",
+        "--- | ---\n",
+        "1 - 6 | 6\n",
+        "6 - 11 | 14\n",
+        "\n",
+        "ここで、範囲の 1 - 6 は 1 を含み 6 を含まない。 6 - 11 は 6 を含み 11 を含まない。\n",
+        "\n",
+        "範囲の作成については次の関数を用いる。\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yoYenAJlbe6R",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "1dd4f2f0-76ba-4f52-c538-478bc01ceadb"
+      },
+      "source": [
+        "scores = [7, 8, 9, 2, 10, 9, 9, 9, 9, 4, 5, 6, 1, 5, 6, 7, 8, 6, 1, 10]\n",
+        "\n",
+        "def create_classes(numbers, n):\n",
+        "    low = min(numbers)\n",
+        "    high = max(numbers)\n",
+        "\n",
+        "    width = (high - low) / n\n",
+        "    classes = []\n",
+        "    a = low\n",
+        "    b = low + width\n",
+        "    while a < (high - width):\n",
+        "        classes.append((a, b))\n",
+        "        a = b\n",
+        "        b = a + width\n",
+        "    classes.append((a, high + 1))\n",
+        "    return classes\n",
+        "\n",
+        "print(create_classes(scores, 2))\n"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(1, 5.5), (5.5, 11)]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_usqz0SIjWgo",
+        "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "# create grouped frequency table\n",
+        "\n",
+        "\n",
+        "scores = [7, 8, 9, 2, 10, 9, 9, 9, 9, 4, 5, 6, 1, 5, 6, 7, 8, 6, 1, 10]\n",
+        "\n",
+        "def create_classes(numbers, n):\n",
+        "    low = min(numbers)\n",
+        "    high = max(numbers)\n",
+        "\n",
+        "    width = (high - low) / n\n",
+        "    classes = []\n",
+        "    a = low\n",
+        "    b = low + width\n",
+        "    while a < (high - width):\n",
+        "        classes.append((a, b))\n",
+        "        a = b\n",
+        "        b = a + width\n",
+        "    classes.append((a, high + 1))\n",
+        "    return classes\n",
+        "\n",
+        "print(create_classes(scores, 2))"
       ],
       "execution_count": null,
       "outputs": []
