Colaboratory を使用して作成しました

--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyPaincwm7eaX/y+y4L8XJ1A",
+      "authorship_tag": "ABX9TyMRuaKk3zpO4jwXp22Cc6Yy",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5122,7 +5122,7 @@
         "print (calc_percentile(data, 50))\n",
         "print (calc_percentile(data, 25))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5190,7 +5190,7 @@
         "\n",
         "print(create_classes(scores, 2))\n"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5233,6 +5233,16 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hSEPWsproSvR",
+        "colab_type": "text"
+      },
+      "source": [
+        "# mode 最頻値から書き直す"
+      ]
     },
     {
       "cell_type": "markdown",
