--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyMRuaKk3zpO4jwXp22Cc6Yy",
+      "authorship_tag": "ABX9TyMZ8MZVIkVcjW0gjCrh6rhL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4042,65 +4042,53 @@
         "colab_type": "text"
       },
       "source": [
-        "上の、Counter, ModeCounter は実装したいね。 これだけのために from collections import Counter はしたくないだろう。 というか実装したほうがわかりやすくないか。\n",
+        "上の、Counter は実装したいね。 これだけのために from collections import Counter はしたくないだろう。 というか実装したほうがわかりやすくないか。\n",
         "\n",
         "\n"
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FV4psoaBzjNw",
+        "colab_type": "text"
+      },
+      "source": [
+        "こんなんでどうだ。"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "UCrtbxN173n4",
+        "id": "Osx2ls7MwnqT",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 168
+          "height": 34
         },
-        "outputId": "ffc2ace9-2be7-455b-a118-46df70aecc44"
+        "outputId": "cdbf3fb9-c044-448e-f209-f0da7aaa3182"
       },
       "source": [
         "simplelist = [4,2,1,4,2,2,3,1,4]\n",
-        "# simplelistをソートする\n",
-        "# 要素をグループ化する => for i in range():\n",
-        "# それぞれのグループを数えて、タプルにする => first, len, map, zip\n",
-        "# \n",
-        "# sortもappendも\n",
-        "simplelist.sort()\n",
-        "print (simplelist)\n",
-        "# print ([5,3,2,6].sort())\n",
-        "# help([].sort) => stable sort *IN PLACE* !!!! => なんちゅうこっちゃ。 python て変だねー。\n",
-        "# まあこれはいいとして、group も実装しなくちゃいけなし、タプルにするにはどうするか。 またいつか戻ってきて考えよう。\n",
-        "def group (l):\n",
-        "    if l == [] :\n",
-        "        return []\n",
-        "    elif len(l)==1:\n",
-        "        return [[:]]\n",
-        "    else :\n",
-        "        list = []\n",
-        "        group = []\n",
-        "        for i in range (len(l) - 1) :\n",
-        "            if l[i] == l[i+1]:\n",
-        "                \n",
         "\n",
+        "def mode_counter(l):\n",
+        "    l.sort()\n",
+        "    items = list(set(l))\n",
+        "    counts = []\n",
+        "    for i in items:\n",
+        "        counts.append(l.count(i))\n",
+        "    item_count = zip(items, counts)\n",
+        "    return (list(item_count))\n",
         "\n",
-        "\n",
-        "# for i in range (len(simplelist)-1):\n",
-        "#     print (simplelist[i])"
+        "count_sorted = sorted(dict(mode_counter(simplelist)).items(), key=lambda x:x[1], reverse=True)\n",
+        "print (count_sorted)"
       ],
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "[1, 1, 2, 2, 2, 3, 4, 4, 4]\n",
-            "1\n",
-            "1\n",
-            "2\n",
-            "2\n",
-            "2\n",
-            "3\n",
-            "4\n",
-            "4\n"
+            "[(2, 3), (4, 3), (1, 2), (3, 1)]\n"
           ],
           "name": "stdout"
         }
@@ -4109,33 +4097,15 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3fxqttdJPvZU",
+        "id": "rtzcB-7ayVu5",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "13b3a31d-b047-4acf-8dda-4067ac76a350"
+        "colab": {}
       },
       "source": [
-        "simplelist = [4,2,1,4,2,2,3,1,4]\n",
-        "items = list(set(simplelist))\n",
-        "counts = []\n",
-        "for i in items:\n",
-        "    counts.append(simplelist.count(i))\n",
-        "item_count = zip(items, counts)\n",
-        "print (list(item_count))\n"
+        ""
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[(1, 2), (2, 3), (3, 1), (4, 3)]\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -4167,6 +4137,47 @@
         {
           "output_type": "stream",
           "text": [
+            "The mode of the list of numbers is: 9\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "DtZC_yrgz8eE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 50
+        },
+        "outputId": "e6929727-0791-4b78-9ad3-50cefd9349c7"
+      },
+      "source": [
+        "scores = [7, 8, 9, 2, 10, 9, 9, 9, 9, 4, 5, 6, 1, 5, 6, 7, 8, 6, 1, 10]\n",
+        "\n",
+        "def mode_counter(l):\n",
+        "    l.sort()\n",
+        "    items = list(set(l))\n",
+        "    counts = []\n",
+        "    for i in items:\n",
+        "        counts.append(l.count(i))\n",
+        "    item_count = zip(items, counts)\n",
+        "    return (list(item_count))\n",
+        "\n",
+        "count_sorted = sorted(dict(mode_counter(scores)).items(), key=lambda x:x[1], reverse=True)\n",
+        "print (count_sorted)\n",
+        "\n",
+        "# mode = calculate_mode(scores)\n",
+        "print(\"The mode of the list of numbers is: {0}\".format(count_sorted[0][0]))"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[(9, 5), (6, 3), (1, 2), (5, 2), (7, 2), (8, 2), (10, 2), (2, 1), (4, 1)]\n",
             "The mode of the list of numbers is: 9\n"
           ],
           "name": "stdout"
@@ -4228,6 +4239,35 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UKViKy8w0c2E",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "def mode_counter(l):\n",
+        "    l.sort()\n",
+        "    items = list(set(l))\n",
+        "    counts = []\n",
+        "    for i in items:\n",
+        "        counts.append(l.count(i))\n",
+        "    item_count = zip(items, counts)\n",
+        "    return (list(item_count))\n",
+        "\n",
+        "scores = [5, 5, 5, 4, 4, 4, 9, 1, 3, 3 ,3]\n",
+        "modes = calculate_mode(scores)\n",
+        "print(\"The mode(s) of the list of numbers are: \")\n",
+        "for mode in modes:\n",
+        "    print(mode)\n",
+        "\n",
+        "count_sorted = sorted(dict(mode_counter(scores)).items(), key=lambda x:x[1], reverse=True)\n",
+        "print (count_sorted)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
