--- a/doingmath01.ipynb
+++ b/doingmath01.ipynb
@@ -6,7 +6,7 @@
       "name": "doingmath01.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNK/rzuBNdYPch1Fjq1eYub",
+      "authorship_tag": "ABX9TyOS+VnWQJMVsXGYpvCX4qqv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5347,7 +5347,7 @@
         "x = symbols('x')\n",
         "factor(x**3 + 3*x**2 + 3*x + 1)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5380,7 +5380,7 @@
       "source": [
         "x.name"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5416,7 +5416,7 @@
         "x, y = symbols('x, y')\n",
         "factor(x**2 - y**2)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5454,7 +5454,7 @@
         "# expand ((x+y)**3)\n",
         "display(expand ((x+y)**3))\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5502,7 +5502,7 @@
         "pprint(c)\n",
         "print(latex(c))"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5563,7 +5563,7 @@
         "\n",
         "\\frac{x^{2} - 4}{x - 2}"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5596,7 +5596,7 @@
         "\n",
         "expr"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5622,7 +5622,48 @@
         "colab_type": "text"
       },
       "source": [
-        "# 数列 sequence, series\n"
+        "# 数列 sequence, 級数 series\n",
+        "\n",
+        "次のような級数を考えてみる。\n",
+        "\n",
+        "$$\n",
+        "x + \\frac{x^2}{2} + \\frac{x^3}{3} + \\frac{x^4}{4} + \\dots + \\frac{x^n}{n}\n",
+        "$$\n",
+        "\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WFqP92c5DI-I",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 54
+        },
+        "outputId": "a4b6052f-8220-47cf-a07e-248f60bfeafb"
+      },
+      "source": [
+        "%%latex\n",
+        "\\displaystyle\n",
+        "\n",
+        "x + \\frac{x^2}{2} + \\frac{x^3}{3} + \\frac{x^4}{4} + \\dots + \\frac{x^n}{n}"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/latex": "\\displaystyle\n\nx + \\frac{x^2}{2} + \\frac{x^3}{3} + \\frac{x^4}{4} + \\dots + \\frac{x^n}{n}",
+            "text/plain": [
+              "<IPython.core.display.Latex object>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          }
+        }
       ]
     },
     {
